Fixed quill editor wrapper dark mode

--- a/frontend/src/app/modules/admin/modules/patterns/pages/create/create.page.scss
+++ b/frontend/src/app/modules/admin/modules/patterns/pages/create/create.page.scss
@@ -9,7 +9,7 @@
 }
 
 .editor-wrapper {
-  background-color: white;
+  background-color: var(--contrast);
   border-radius: 12px;
   padding: 12px 16px;
   box-sizing: border-box;
