--- a/frontend/src/app/modules/admin/modules/patterns/pages/pattern/pattern.page.scss
+++ b/frontend/src/app/modules/admin/modules/patterns/pages/pattern/pattern.page.scss
@@ -10,7 +10,7 @@
 .editor-wrapper {
   width: 100%;
   padding: 12px 16px;
-  background-color: white;
+  background-color: var(--contrast);
   border-radius: 12px;
   box-sizing: border-box;
 }
